[package]
name = "hmcrovator"
version = "0.1.0"
authors = ["MartinVrbovcan <43181691+MartinVrbovcan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.4"
lazy_static = "1.4.0"
regex = "1.3.4"
colored = "1.9.3"
